--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "dev": "NODE_NO_WARNINGS=1 nodemon src/server.js",
+    "start": "NODE_ENV=production node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
+    "nodemon": "^3.1.10",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
     "sharp": "^0.34.2",
