--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
+    "@fastify/helmet": "^13.0.1",
     "@fastify/multipart": "^9.0.3",
     "@supabase/supabase-js": "^2.49.8",
     "axios": "^1.9.0",
